--- a/index.html
+++ b/index.html
@@ -7,5 +7,77 @@
         <title>Landing Page - TheOdinProject</title>
         <link rel="stylesheet" type="text/css" href="css/styles.css">
     </head>
-    <body></body>
+    <body>
+        <div class="hero">
+
+            <header>
+                <div class="left">
+                    <div>Header Logo</div>
+                </div>
+                <ul class="right-links">
+                    <li><a href="#">header link one</a></li>
+                    <li><a href="#">header link two</a></li>
+                    <li><a href="#">header link three</a></li>
+                </ul>
+            </header>
+
+            <div class="hero-main">
+                <div class="main-text">This website is awesome</div>
+                <div>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</div>
+                <div class="btn-sign-up">
+                    <button>Sign up</button>
+                </div>
+                <div class="img">
+                    <img src="#" alt="">
+                </div>
+            </div>
+
+            <div class="information">
+                <div class="header-information">Some random information.</div>
+                <div class="cards">
+                    <div class="card">
+                        <div class="picture-frame">
+                            <img src="#" alt="">
+                        </div>
+                        <div class="subtext">this is some subtext under an illustration or image</div>
+                    </div>
+                    <div class="card">
+                        <div class="picture-frame">
+                            <img src="#" alt="">
+                        </div>
+                        <div class="subtext">this is some subtext under an illustration or image</div>
+                    </div>
+                    <div class="card">
+                        <div class="picture-frame">
+                            <img src="#" alt="">
+                        </div>
+                        <div class="subtext">this is some subtext under an illustration or image</div>
+                    </div>
+                    <div class="card">
+                        <div class="picture-frame">
+                            <img src="#" alt="">
+                        </div>
+                        <div class="subtext">this is some subtext under an illustration or image</div>
+                    </div>
+            </div>
+
+            <div class="quote-section">
+                <div class="quote-text"></div>
+            </div>
+
+            <div class="call-to-action">
+                <div class="header-call-to-action"></div>
+                <div class="text-call-to-action"></div>
+                <div class="btn-call-to-action">
+                    <button>Sign up</button>
+                </div>
+            </div>
+
+            <footer>
+                <div class="text-footer">Copyright c The Odin Project 2022</div>
+            </footer>
+        </div>
+
+        
+    </body>
 </html>
