Add style to hero main

--- a/index.html
+++ b/index.html
@@ -17,14 +17,18 @@
             </ul>
         </header>
 
-        <div class="hero-main">
-            <div class="main-text">This website is awesome</div>
-            <div class="secondary-text">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</div>
-            <div class="btn-sign-up">
-                <button>Sign up</button>
+        <div class="hero-main-container">
+            <div class="hero-left-container">
+                <div class="main-text">This website is awesome</div>
+                <div class="secondary-text">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</div>
+                <div class="container-sign-up">
+                    <button class="btn-sign-up">Sign up</button>
+                </div>
             </div>
-            <div class="img">
-                <img src="#" alt="">
+            <div class="hero-right-container">
+                <div class="placeholder-image">
+                    this is a placeholder for an image
+                </div>
             </div>
         </div>
 
