--- a/index.html
+++ b/index.html
@@ -79,7 +79,8 @@
         </div>
 
         <div class="quote-section">
-            <div class="quote-text"></div>
+            <div class="quote-text">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All i know is that it looks nice.</div>
+            <div class="quote-autor">-Thor, God of Thunder</div>
         </div>
 
         <div class="call-to-action">
