Add style to footer section

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         </div>
 
         <footer class="footer">
-            <div class="text-footer">Copyright c The Odin Project 2022</div>
+            <div class="footer-text">Copyright © The Odin Project 2022</div>
         </footer>
         
     </body>
